# transcriber

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .env.example  .gitignore  CLAUDE.md  PERFORMANCE_TESTING.md  README.md  SANITIZER_VERIFICATION.md  acceptance-criteria-verification.md  eslint.config.mjs  i18n-config.ts  package.json  pnpm-lock.yaml  sample-export-all-items.json  sample-export-json-no-audio.json  sample-export-json-with-audio.json  sample-export-markdown-no-audio.md  sample-export-markdown-with-audio.md  sample-export-todos.md  test-export.ts  test-manual-verification.md  test-rate-limiter.html  test-rate-limiter.mjs  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
components/: AudioPlayer.tsx  DetailView.tsx  DraftView.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorMessage.tsx  ExportDialog.tsx  KeyboardShortcutsDialog.tsx  MarkdownRenderer.tsx  ResearchView.tsx  SearchBar.tsx  SettingsDialog.tsx  Sidebar.tsx  TodoView.tsx  language-provider.tsx  theme-provider.tsx
dictionaries/: bg.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fi.json  fr.json  ga.json  hr.json  hu.json  it.json  lt.json  lv.json  mt.json  nl.json  pl.json  pt.json  ro.json  sk.json  sl.json  sv.json
hooks/: useAudioPlayer.ts  useAudioRecorder.ts  useKeyboardShortcuts.ts  useNetworkStatus.ts  useSearch.ts  useSettings.ts  useTheme.ts  useUndoRedo.ts
lib/: ai.ts  (+13 more)
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  crypto.rs  lib.rs
(+16 files in other folders)
